#590 - adapter selenium tests